--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,9 +3,9 @@
     <h1><img class="margetop large-3 medium-6 small-12 columns logo" src="assets/img/logo.png" alt="Musée de Strasbourg"></h1>
     <nav class="large-9 medium-6 small-12 columns">
       <ul class="menu vertical margetop">
-        <li><a href="#">ACTUALITÉS/AGENDA</a></li>
-        <li><a href="#">MUSÉES</a></li>
-        <li><a href="#">INFORMATIONS</a></li>
+        <li class="item1"><a href="#">ACTUALITÉS/AGENDA</a></li>
+        <li class="item2"><a href="#">MUSÉES</a></li>
+        <li class="item3"><a href="#">INFORMATIONS</a></li>
       </ul>
     </nav>
   </div>
