--- a/src/partials/gallerie.html
+++ b/src/partials/gallerie.html
@@ -1,6 +1,6 @@
 <section class="gallerie">
   <div class="row large-up-3 medium-up-2 small-up-1">
-    <figure class="columns"><a href="#"><div><img src="../assets/img/1.png"></div><figcaption>AUBETTE 1928</figcaption></a></figure>
+    <figure class="columns"><a href="#"><div class="pinkhover"></div><img src="../assets/img/1.png"><figcaption>AUBETTE 1928</figcaption></a></figure>
     <figure class="columns"><a href="#"><img src="../assets/img/2.png"><figcaption>CABINET DES ESTAMPES & DES DESSINS</figcaption></a></figure>
     <figure class="columns"><a href="#"><img src="../assets/img/3.png"><figcaption>MUSÉE ALSACIEN</figcaption></a></figure>
     <figure class="columns"><a href="#"><img src="../assets/img/4.png"><figcaption>MUSÉE ARCHÉOLOGIQUE</figcaption></a></figure>
