--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -47,6 +47,7 @@
 // @include foundation-flex-classes;
 
 @import "override";
+@import "media";
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 @include motion-ui-transitions;
