--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="large-4 medium-6 small-12 columns"><h4>INSCRIVEZ-VOUS À LA NEWSLETTER DES MUSÉES !</h4></div>
     <form class="large-4 medium-6 small-12 columns" action="">
-      <input type="text" name="name" value="E-MAIL">
+      <input type="text" name="name" value="E-MAIL" class="recherche">
     </form>
     <div class="large-2 medium-6 small-12 columns"><h4>PUBLICATIONS DES MUSÉES</h4></div>
     <div class="large-2 medium-6 small-12 columns"><h4>ESPACE PRESSE</h4></div>
@@ -10,8 +10,11 @@
   <div class="row">
   <ul class="menu">
     <li><a href="#">ACCUEIL</a></li>
+    <li class="sep">|</li>
     <li><a href="#">CONTACT</a></li>
+    <li class="sep">|</li>
     <li><a href="#">PLAN DU SITE</a></li>
+    <li class="sep">|</li>
     <li><a href="#">MENTION LÉGALES</a></li>
   </ul>
 </div>
