--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,6 +1,6 @@
 <section class="sliderino">
 <div class="row">
 <h2>Nouvelles salles des dessins d'architecture </br> de la cathédrale de Strasbourg</h2>
-<h3>N'oubliez pas de vous inscrire </br> pour visiter la salle de conservation</h3>
+<h3>N'oubliez pas de vous inscrire </br> pour visiter la salle de conservation de dessins</h3>
 </div>
 </section>
