--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,21 +1,21 @@
 <footer>
   <div class="row">
-    <div class="large-4 medium-6 small-12 columns"><h4>INSCRIVEZ-VOUS À LA NEWSLETTER DES MUSÉES !</h4></div>
+    <div class="large-4 medium-6 small-12 columns"><h4><a>INSCRIVEZ-VOUS À LA NEWSLETTER DES MUSÉES !</a></h4></div>
     <form class="large-4 medium-6 small-12 columns" action="">
       <input type="text" name="name" value="E-MAIL" class="recherche">
     </form>
-    <div class="large-2 medium-6 small-12 columns"><h4>PUBLICATIONS DES MUSÉES</h4></div>
-    <div class="large-2 medium-6 small-12 columns"><h4>ESPACE PRESSE</h4></div>
+    <div class="large-2 medium-6 small-12 columns"><h4><a>PUBLICATIONS DES MUSÉES</a></h4></div>
+    <div class="large-2 medium-6 small-12 columns"><h4><a>ESPACE PRESSE</a></h4></div>
   </div>
   <div class="row">
-  <ul class="menu">
-    <li><a href="#">ACCUEIL</a></li>
-    <li class="sep">|</li>
-    <li><a href="#">CONTACT</a></li>
-    <li class="sep">|</li>
-    <li><a href="#">PLAN DU SITE</a></li>
-    <li class="sep">|</li>
-    <li><a href="#">MENTION LÉGALES</a></li>
-  </ul>
-</div>
+    <ul class="menu">
+      <li><a href="#">ACCUEIL</a></li>
+      <li class="sep">|</li>
+      <li><a href="#">CONTACT</a></li>
+      <li class="sep">|</li>
+      <li><a href="#">PLAN DU SITE</a></li>
+      <li class="sep">|</li>
+      <li><a href="#">MENTION LÉGALES</a></li>
+    </ul>
+  </div>
 </footer>
