--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -48,7 +48,8 @@
 
 @import "override";
 @import "media";
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+//@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Nunito:300,400,700');
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
